--- a/register.html
+++ b/register.html
@@ -37,7 +37,9 @@
           const email    = form.email.value.trim();
           const username = form.username.value.trim();
           const password = form.password.value;
+          const gender   = form.gender.value || "male";
           const msg = document.getElementById('message');
+          const avatarUrl = `https://xsgames.co/randomusers/avatar.php?g=${gender}`;
 
           // disable inputs during processing
           form.querySelectorAll('input, button').forEach(el => el.disabled = true);
@@ -46,10 +48,7 @@
             // 1. Create account
             const { user } = await createUserWithEmailAndPassword(auth, email, password);
 
-            // 2. Generate random avatar URL (DiceBear)
-            const avatarUrl = `https://api.dicebear.com/7.x/pixel-art/svg?seed=${encodeURIComponent(username)}`;
-
-            // 3. Create Firestore user profile
+            // 2. Create Firestore user profile
             await setDoc(doc(db, "users", user.uid), {
               email: email,
               username: username,
@@ -57,12 +56,12 @@
               avatarUrl: avatarUrl
             });
 
-            // 4. Send verification email
+            // 3. Send verification email
             await sendEmailVerification(user, {
               url: window.location.origin + '/login.html'
             });
 
-            // 5. Show confirmation message
+            // 4. Show confirmation message
             msg.textContent = `A verification link has been sent to ${email}. Please check your inbox to activate your account.`;
             msg.style.display = 'block';
             form.reset();
@@ -160,6 +159,17 @@
       border-radius: 4px;
       font-size: 0.9rem;
     }
+    .gender-group {
+      display: flex;
+      gap: 16px;
+      margin-bottom: 16px;
+      align-items: center;
+    }
+    .gender-group label {
+      font-weight: normal;
+      font-size: 0.95em;
+      color: #333;
+    }
     .checkbox-group {
       display: flex;
       align-items: center;
@@ -241,6 +251,14 @@
       <div class="form-group">
         <label for="password">Password <span>*</span></label>
         <input type="password" id="password" required />
+      </div>
+
+      <div class="form-group">
+        <label>Avatar Gender <span>*</span></label>
+        <div class="gender-group">
+          <label><input type="radio" name="gender" value="male" checked> Male</label>
+          <label><input type="radio" name="gender" value="female"> Female</label>
+        </div>
       </div>
 
       <div class="checkbox-group">
