--- a/register.html
+++ b/register.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Register – IR-LDCE Quiz</title>
 
-  <!-- Font Awesome for the Apple icon -->
+  <!-- Font Awesome for the Apple/Google icons -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
   <!-- Firebase Modular SDKs -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword, sendEmailVerification } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-    import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+    import { getAuth, createUserWithEmailAndPassword, sendEmailVerification, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+    import { getFirestore, doc, setDoc, serverTimestamp, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
     // Your Firebase config
     const firebaseConfig = {
@@ -30,6 +30,7 @@
 
     // Registration handler
     window.addEventListener('DOMContentLoaded', () => {
+      // Email/password registration
       document.getElementById('registerForm')
         .addEventListener('submit', async (e) => {
           e.preventDefault();
@@ -70,6 +71,45 @@
             form.querySelectorAll('input, button').forEach(el => el.disabled = false);
           }
         });
+
+      // Google sign-in
+      const googleBtn = document.getElementById("googleBtn");
+      if (googleBtn) {
+        googleBtn.addEventListener("click", async () => {
+          const provider = new GoogleAuthProvider();
+          provider.setCustomParameters({ prompt: "select_account" }); // Always show account picker
+
+          try {
+            const result = await signInWithPopup(auth, provider);
+            const user = result.user;
+
+            // Prompt for gender (simple prompt, you can use a modal for better UX)
+            let gender = prompt("Choose avatar gender: male or female", "male");
+            gender = (gender && gender.toLowerCase() === "female") ? "female" : "male";
+            const avatarUrl = `https://xsgames.co/randomusers/avatar.php?g=${gender}`;
+
+            // Use displayName or email prefix as username
+            const username = user.displayName ? user.displayName : user.email.split('@')[0];
+
+            // Save to Firestore if new user
+            const userDoc = doc(db, "users", user.uid);
+            const userSnap = await getDoc(userDoc);
+            if (!userSnap.exists()) {
+              await setDoc(userDoc, {
+                email: user.email,
+                username: username,
+                createdAt: serverTimestamp(),
+                avatarUrl: avatarUrl
+              });
+            }
+
+            // Redirect to dashboard
+            window.location.href = "dashboard.html";
+          } catch (err) {
+            alert("Google Sign-In failed: " + err.message);
+          }
+        });
+      }
     });
   </script>
 
@@ -108,16 +148,31 @@
       text-decoration: none;
       font-weight: bold;
     }
-    .social-btn.apple {
+    .social-btn.apple, .social-btn.google {
       width: 100%;
       padding: 12px;
-      background: #000;
-      color: #fff;
       border: none;
       border-radius: 4px;
       font-size: 0.9rem;
       cursor: pointer;
+      margin-bottom: 16px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      justify-content: center;
+    }
+    .social-btn.apple {
+      background: #000;
+      color: #fff;
       margin-bottom: 20px;
+    }
+    .social-btn.google {
+      background: #fff;
+      color: #444;
+      border: 1px solid #ccc;
+    }
+    .social-btn.google:hover {
+      background: #f5f5f5;
     }
     .divider {
       position: relative;
@@ -231,8 +286,11 @@
       <a href="#">Community Guidelines</a>
     </p>
 
-    <button id="appleBtn" class="social-btn apple">
+    <button id="appleBtn" class="social-btn apple" type="button">
       <i class="fab fa-apple"></i> CONTINUE WITH APPLE
+    </button>
+    <button id="googleBtn" class="social-btn google" type="button">
+      <i class="fab fa-google"></i> CONTINUE WITH GOOGLE
     </button>
 
     <div class="divider"><span>or</span></div>
@@ -267,7 +325,6 @@
       </div>
 
       <a href="forgot-password.html" class="forgot-link">Forgot Password?</a>
-
       <p class="required-note">* indicates a required field</p>
 
       <div class="actions-row">
