--- a/quiz.html
+++ b/quiz.html
@@ -35,6 +35,33 @@
         font-size: 1.2em;
         color: #888;
       }
+      .user-info-bar {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        margin-bottom: 20px;
+        background: #f5f7fa;
+        border-radius: 6px;
+        padding: 8px 14px;
+      }
+      .user-info-bar img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        object-fit: cover;
+        border: 2px solid #1976d2;
+      }
+      .user-info-bar .user-info-details {
+        display: flex;
+        flex-direction: column;
+      }
+      .user-info-bar .user-info-details .user-name {
+        font-weight: bold;
+      }
+      .user-info-bar .user-info-details .user-email {
+        font-size: 0.95em;
+        color: #555;
+      }
     </style>
 </head>
 <body>
@@ -45,6 +72,14 @@
     </noscript>
     <div id="loading">Checking authentication...</div>
     <div class="app" style="display:none;">
+        <!-- User Info Bar -->
+        <div class="user-info-bar" id="quizUserInfoBar" style="display:none;">
+          <img id="quizUserAvatar" src="default-avatar.png" alt="User Avatar">
+          <div class="user-info-details">
+            <div id="quizUserName" class="user-name"></div>
+            <div id="quizUserEmail" class="user-email"></div>
+          </div>
+        </div>
         <h1>
             Quiz
             <a href="index.html" class="home-link">Home</a>
@@ -61,7 +96,7 @@
     <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
       import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-      import { getFirestore } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+      import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
       const firebaseConfig = {
         apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
@@ -82,14 +117,25 @@
       window.firebaseAuth = auth;
       window.firebaseDb = db;
 
-      onAuthStateChanged(auth, (user) => {
+      onAuthStateChanged(auth, async (user) => {
         if (!user) {
           const returnUrl = encodeURIComponent(window.location.pathname + window.location.search);
           window.location.href = `login.html?redirect=${returnUrl}`;
         } else {
           document.getElementById('loading').style.display = 'none';
           document.querySelector('.app').style.display = 'block';
-          
+
+          // Fetch user info from Firestore and display in bar
+          const userRef = doc(db, "users", user.uid);
+          const userSnap = await getDoc(userRef);
+          if (userSnap.exists()) {
+            const userData = userSnap.data();
+            document.getElementById('quizUserAvatar').src = userData.avatarUrl || "default-avatar.png";
+            document.getElementById('quizUserName').textContent = userData.username || user.email.split('@')[0];
+            document.getElementById('quizUserEmail').textContent = user.email;
+            document.getElementById('quizUserInfoBar').style.display = "flex";
+          }
+
           // Initialize quiz after auth confirmation
           if (typeof initQuiz === 'function') {
             initQuiz();
