--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,106 @@
   <meta charset="UTF-8">
   <title>User Dashboard</title>
   <link rel="stylesheet" href="dashboard.css">
+  <style>
+    body {
+      background: #fafafa;
+      font-family: Arial, sans-serif;
+      min-height: 100vh;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+    }
+    .dashboard-container {
+      max-width: 420px;
+      margin: 48px auto;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
+      padding: 32px 24px 24px 24px;
+      position: relative;
+      min-width: 320px;
+    }
+    .profile-section {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 30px;
+      justify-content: center;
+    }
+    .avatar-container {
+      position: relative;
+    }
+    #userAvatar {
+      width: 90px;
+      height: 90px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #1976d2;
+      background: #f2f2f2;
+    }
+    .profile-info h2 {
+      margin: 0 0 8px 0;
+      font-size: 1.3em;
+      color: #003366;
+    }
+    .profile-info p {
+      margin: 0;
+      font-size: 1em;
+      color: #222;
+    }
+    .dashboard-section {
+      margin-bottom: 32px;
+    }
+    .dashboard-section h3 {
+      margin-bottom: 10px;
+      font-size: 1.1em;
+      color: #222;
+    }
+    .quiz-history table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    .quiz-history th, .quiz-history td {
+      padding: 10px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+      font-size: 0.97em;
+    }
+    .quiz-history th {
+      background-color: #f5f5f5;
+      color: #002147;
+    }
+    .quiz-list .manual-btn {
+      width: 100%;
+      margin: 0 0 10px 0;
+      padding: 13px;
+      font-size: 1.09em;
+    }
+    .error-message {
+      background: #ffe0e0;
+      color: #b00;
+      padding: 1em;
+      border-radius: 4px;
+      margin-bottom: 1em;
+      text-align: center;
+    }
+    @media (max-width: 600px) {
+      .dashboard-container {
+        max-width: 98vw;
+        min-width: 0;
+        padding: 12px 4vw 22px 4vw;
+      }
+      .profile-section {
+        flex-direction: column;
+        gap: 10px;
+      }
+      #userAvatar {
+        width: 70px;
+        height: 70px;
+      }
+    }
+  </style>
 </head>
 <body>
   <!-- Shared header (Home, Login, Logout) -->
@@ -17,13 +117,11 @@
     <!-- Profile Section -->
     <div class="profile-section">
       <div class="avatar-container">
-        <!-- High-quality avatar: update avatarUrl in Firestore to use e.g. Avataaars -->
         <img id="userAvatar" src="default-avatar.png" alt="Profile Picture">
       </div>
       <div class="profile-info">
         <h2>Welcome, <span id="dashboard-username">User</span>!</h2>
         <p>Email: <span id="account-email">user@example.com</span></p>
-        <!-- No logout button here; handled by header -->
       </div>
     </div>
 
