--- a/login.html
+++ b/login.html
@@ -74,7 +74,49 @@
       text-align: center;
       display: none;
     }
+    .social-btn.google {
+      width: 100%;
+      padding: 12px;
+      background: #fff;
+      color: #444;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 0.97rem;
+      cursor: pointer;
+      margin-bottom: 16px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      justify-content: center;
+      font-weight: bold;
+    }
+    .social-btn.google:hover {
+      background: #f5f5f5;
+    }
+    .social-btn.google i {
+      color: #ea4335;
+      font-size: 1.1em;
+    }
+    .or-divider {
+      text-align: center;
+      margin: 18px 0 14px 0;
+      color: #888;
+      font-size: 0.95em;
+      position: relative;
+    }
+    .or-divider:before,
+    .or-divider:after {
+      content: "";
+      display: inline-block;
+      width: 35%;
+      height: 1px;
+      background: #ddd;
+      vertical-align: middle;
+      margin: 0 8px;
+    }
   </style>
+  <!-- Font Awesome for Google icon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
 <body>
   <noscript>
@@ -85,6 +127,10 @@
   <div class="login-container">
     <h2>Login to Quiz App</h2>
     <div id="error-message" class="error-message"></div>
+    <button id="googleBtn" class="social-btn google" type="button">
+      <i class="fab fa-google"></i> Sign in with Google
+    </button>
+    <div class="or-divider">or</div>
     <form id="loginForm" autocomplete="on">
       <label for="email">Email</label>
       <input type="email" id="email" required placeholder="Enter your email" autocomplete="username">
@@ -96,7 +142,73 @@
       Don't have an account? <a href="register.html">Sign up</a>
     </div>
   </div>
-  <!-- Use module import for Firebase logic -->
-  <script type="module" src="auth.js"></script>
+  <!-- Firebase logic for Google sign-in -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+    import { getFirestore, doc, setDoc, getDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+    // Your Firebase config
+    const firebaseConfig = {
+      apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+      authDomain: "quiz-app-1b48b.firebaseapp.com",
+      projectId: "quiz-app-1b48b",
+      storageBucket: "quiz-app-1b48b.appspot.com",
+      messagingSenderId: "765334603137",
+      appId: "1:765334603137:web:1c8a13f6086a6773c2d480",
+      measurementId: "G-YQJQWJ12N7"
+    };
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+
+    // Email/password login
+    document.getElementById('loginForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const email = e.target.email.value.trim();
+      const password = e.target.password.value;
+      const errorDiv = document.getElementById('error-message');
+      errorDiv.style.display = "none";
+      try {
+        await signInWithEmailAndPassword(auth, email, password);
+        window.location.href = "dashboard.html";
+      } catch (err) {
+        errorDiv.textContent = err.message;
+        errorDiv.style.display = "block";
+      }
+    });
+
+    // Google sign-in
+    document.getElementById('googleBtn').addEventListener('click', async () => {
+      const provider = new GoogleAuthProvider();
+      provider.setCustomParameters({ prompt: "select_account" }); // Always show account picker
+      const errorDiv = document.getElementById('error-message');
+      errorDiv.style.display = "none";
+      try {
+        const result = await signInWithPopup(auth, provider);
+        const user = result.user;
+        // Check if Firestore user doc exists, create if not
+        const userDoc = doc(db, "users", user.uid);
+        const userSnap = await getDoc(userDoc);
+        if (!userSnap.exists()) {
+          // Prompt for gender for avatar (optional, or default to male)
+          let gender = prompt("Choose avatar gender: male or female", "male");
+          gender = (gender && gender.toLowerCase() === "female") ? "female" : "male";
+          const avatarUrl = `https://xsgames.co/randomusers/avatar.php?g=${gender}`;
+          const username = user.displayName ? user.displayName : user.email.split('@')[0];
+          await setDoc(userDoc, {
+            email: user.email,
+            username: username,
+            createdAt: serverTimestamp(),
+            avatarUrl: avatarUrl
+          });
+        }
+        window.location.href = "dashboard.html";
+      } catch (err) {
+        errorDiv.textContent = "Google Sign-In failed: " + err.message;
+        errorDiv.style.display = "block";
+      }
+    });
+  </script>
 </body>
 </html>
