--- a/dashboard.html
+++ b/dashboard.html
@@ -3,113 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>User Dashboard</title>
-  <link rel="stylesheet" href="dashboard.css">
+  <link rel="stylesheet" href="style.css">
   <style>
-    body {
-      background: #fafafa;
-      font-family: Arial, sans-serif;
-      min-height: 100vh;
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-    }
-    .dashboard-container {
-      max-width: 420px;
-      margin: 48px auto;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
-      padding: 32px 24px 24px 24px;
-      position: relative;
-      min-width: 320px;
-    }
-    .profile-section {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-      margin-bottom: 30px;
-      justify-content: center;
-    }
-    .avatar-container {
-      position: relative;
-    }
-    #userAvatar {
-      width: 90px;
-      height: 90px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 3px solid #1976d2;
-      background: #f2f2f2;
-    }
-    .profile-info h2 {
-      margin: 0 0 8px 0;
-      font-size: 1.3em;
-      color: #003366;
-    }
-    .profile-info p {
-      margin: 0;
-      font-size: 1em;
-      color: #222;
-    }
-    .dashboard-section {
-      margin-bottom: 32px;
-    }
-    .dashboard-section h3 {
-      margin-bottom: 10px;
-      font-size: 1.1em;
-      color: #222;
-    }
-    .quiz-history table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-    .quiz-history th, .quiz-history td {
-      padding: 10px;
-      text-align: left;
-      border-bottom: 1px solid #ddd;
-      font-size: 0.97em;
-    }
-    .quiz-history th {
-      background-color: #f5f5f5;
-      color: #002147;
-    }
-    .quiz-list .manual-btn {
-      width: 100%;
-      margin: 0 0 10px 0;
-      padding: 13px;
-      font-size: 1.09em;
-    }
-    .error-message {
-      background: #ffe0e0;
-      color: #b00;
-      padding: 1em;
-      border-radius: 4px;
-      margin-bottom: 1em;
-      text-align: center;
-    }
-    @media (max-width: 600px) {
-      .dashboard-container {
-        max-width: 98vw;
-        min-width: 0;
-        padding: 12px 4vw 22px 4vw;
-      }
-      .profile-section {
-        flex-direction: column;
-        gap: 10px;
-      }
-      #userAvatar {
-        width: 70px;
-        height: 70px;
-      }
-    }
+    /* Optionally, you can add dashboard-specific tweaks here, but all main styles are in style.css */
   </style>
 </head>
 <body>
   <!-- Shared header (Home, Login, Logout) -->
   <div id="include-header"></div>
 
-  <div class="dashboard-container">
+  <div class="dashboard-main-content">
     <div id="error-message" class="error-message" style="display:none;">
       You are not logged in. <a href="login.html">Go to login</a>
     </div>
@@ -146,15 +49,15 @@
     <div class="dashboard-section" id="quiz-section">
       <h3>Available Quizzes</h3>
       <div class="quiz-list">
-        <button class="manual-btn" data-manual="irwm" aria-label="Start quiz for Indian Railway Works Manual">1. Indian Railway Works Manual</button>
-        <button class="manual-btn" data-manual="irpwm" aria-label="Start quiz for Indian Railway P-way Manual">2. Indian Railway P-way Manual</button>
-        <button class="manual-btn" data-manual="irdim" aria-label="Start quiz for Indian Railway Schedule of Dimensions">3. Indian Railway Schedule of Dimensions</button>
-        <button class="manual-btn" data-manual="irec" aria-label="Start quiz for Indian Railway Engineering Code">4. Indian Railway Engineering Code</button>
-        <button class="manual-btn" data-manual="stm" aria-label="Start quiz for Small Track Machine Manual">5. Small Track Machine Manual</button>
-        <button class="manual-btn" data-manual="usfd" aria-label="Start quiz for USFD Manual">6. USFD Manual</button>
-        <button class="manual-btn" data-manual="fbwm" aria-label="Start quiz for FBW Manual">7. FBW Manual</button>
-        <button class="manual-btn" data-manual="store" aria-label="Start quiz for Store Manual">8. Store Manual</button>
-        <button class="manual-btn" data-manual="account" aria-label="Start quiz for Account Manual">9. Account Manual</button>
+        <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
+        <button class="manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
+        <button class="manual-btn" data-manual="irdim">3. Indian Railway Schedule of Dimensions</button>
+        <button class="manual-btn" data-manual="irec">4. Indian Railway Engineering Code</button>
+        <button class="manual-btn" data-manual="stm">5. Small Track Machine Manual</button>
+        <button class="manual-btn" data-manual="usfd">6. USFD Manual</button>
+        <button class="manual-btn" data-manual="fbwm">7. FBW Manual</button>
+        <button class="manual-btn" data-manual="store">8. Store Manual</button>
+        <button class="manual-btn" data-manual="account">9. Account Manual</button>
       </div>
     </div>
   </div>
