--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Indian Railway Manuals Quiz</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Font Awesome -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
   <link rel="stylesheet" href="style.css" />
   <style>
     .quiz-header-row {
@@ -33,7 +30,7 @@
       border: none;
       padding: 8px 18px;
       border-radius: 4px;
-      font-size: 1em;
+      font-size: 1rem;
       font-weight: bold;
       cursor: pointer;
       transition: background 0.2s;
@@ -53,7 +50,7 @@
     }
     .manual-btn {
       padding: 12px 18px;
-      font-size: 1.1em;
+      font-size: 1.1rem;
       border: none;
       border-radius: 6px;
       background: #f8f9fa;
@@ -79,6 +76,11 @@
     body {
       background: #f4f6fa;
     }
+    .manual-btn[disabled] {
+      cursor: not-allowed;
+      background: #ccc;
+      color: #666;
+    }
   </style>
 </head>
 <body>
@@ -90,6 +92,9 @@
     <div class="error" style="background:#ffe0e0;color:#b00;padding:1em;margin:1em 0;">
       This quiz app requires JavaScript to function properly.
     </div>
+    <style>
+      .manual-btn { display: none !important; }
+    </style>
   </noscript>
 
   <!-- Quiz App -->
@@ -117,14 +122,13 @@
   </div>
 
   <!-- Firebase compat SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 
   <!-- Bootstrap JS Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-  <script>
-    // 1) Load and inject header.html with error handling
+  <script defer>
     async function includeHeader() {
       try {
         const resp = await fetch('header.html');
@@ -135,7 +139,6 @@
       }
     }
 
-    // 2) Initialize Firebase & wire everything up
     function initApp() {
       firebase.initializeApp({
         apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
@@ -147,61 +150,49 @@
         measurementId: "G-YQJQWJ12N7"
       });
 
-      // Defensive DOM access
       const logoutBtn    = document.getElementById('logoutButton');
       const loginLink    = document.getElementById('loginLink');
       const registerLink = document.getElementById('registerLink');
       const dashboardBtnContainer = document.getElementById('dashboardBtnContainer');
       const dashboardBtn = document.getElementById('dashboardBtn');
 
-      // 3) Toggle header links and dashboard button on auth change
       firebase.auth().onAuthStateChanged(user => {
         if (logoutBtn && loginLink && registerLink) {
-          if (user) {
-            logoutBtn.style.display    = 'inline-block';
-            loginLink.style.display    = 'none';
-            registerLink.style.display = 'none';
-          } else {
-            logoutBtn.style.display    = 'none';
-            loginLink.style.display    = 'inline-block';
-            registerLink.style.display = 'inline-block';
-          }
+          logoutBtn.style.display    = user ? 'inline-block' : 'none';
+          loginLink.style.display    = user ? 'none' : 'inline-block';
+          registerLink.style.display = user ? 'none' : 'inline-block';
         }
-        // Show dashboard button only if logged in
+
         if (dashboardBtnContainer) {
           dashboardBtnContainer.style.display = user ? 'block' : 'none';
         }
       });
 
-      // 4) Logout handler
       if (logoutBtn) {
         logoutBtn.addEventListener('click', () =>
           firebase.auth().signOut().then(() => location.reload())
         );
       }
 
-      // 5) Dashboard button handler (robust: always attach if present)
       if (dashboardBtn) {
         dashboardBtn.onclick = () => {
           window.location.href = 'dashboard.html';
         };
       }
 
-      // 6) Quiz button click → check real‐time auth then redirect
       document.querySelectorAll('.manual-btn').forEach(btn => {
         btn.addEventListener('click', () => {
           const user = firebase.auth().currentUser;
+          const redirect = `quiz.html?manual=${btn.dataset.manual}`;
           if (user) {
-            window.location.href = `quiz.html?manual=${btn.dataset.manual}`;
+            window.location.href = redirect;
           } else {
-            // Pass redirect info for smoother UX after login
-            window.location.href = `login.html?redirect=quiz.html?manual=${btn.dataset.manual}`;
+            window.location.href = `login.html?redirect=${encodeURIComponent(redirect)}`;
           }
         });
       });
     }
 
-    // 7) Kick it off: inject header, then init app
     includeHeader().then(initApp);
   </script>
 </body>
